--- a/src/main/resources/assets/chatabove/lang/en_us.json
+++ b/src/main/resources/assets/chatabove/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "text.autoconfig.chatabove.category": "Chat Above",
   "text.autoconfig.chatabove.title": "Chat Above",
-  "text.autoconfig.chatabove.enabled": "enable",
-  "text.autoconfig.chatabove.maxLineSize": "maximum line length",
-  "text.autoconfig.chatabove.fadeSeconds": "display time",
-  "text.autoconfig.chatabove.animationType": "animation type"
+  "text.autoconfig.chatabove.option.enabled": "enable",
+  "text.autoconfig.chatabove.option.maxLineSize": "maximum line length",
+  "text.autoconfig.chatabove.option.fadeSeconds": "display time",
+  "text.autoconfig.chatabove.option.animationType": "animation type"
 }
