--- a/src/main/resources/assets/chatabove/lang/ru_ru.json
+++ b/src/main/resources/assets/chatabove/lang/ru_ru.json
@@ -1,8 +1,8 @@
 {
   "text.autoconfig.chatabove.category": "Chat Above",
   "text.autoconfig.chatabove.title": "Chat Above",
-  "text.autoconfig.chatabove.enabled": "включено",
-  "text.autoconfig.chatabove.maxLineSize": "максимальная длина строки",
-  "text.autoconfig.chatabove.fadeSeconds": "время отображения",
-  "text.autoconfig.chatabove.animationType": "тип анимации"
+  "text.autoconfig.chatabove.option.enabled": "включено",
+  "text.autoconfig.chatabove.option.maxLineSize": "максимальная длина строки",
+  "text.autoconfig.chatabove.option.fadeSeconds": "время отображения",
+  "text.autoconfig.chatabove.option.animationType": "тип анимации"
 }
